Update home hero copy and background styling

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -21,9 +21,9 @@
   },
   "home": {
     "heroBadge": "Coto Brus, Puntarenas",
-    "heroTitle": "Propiedades con datos claros y ",
-    "heroTitleHighlight": "asesoría local",
-    "heroSubtitle": "Encuentra tu próximo hogar o inversión en el corazón de la zona sur",
+    "heroTitle": "Compra con claridad. ",
+    "heroTitleHighlight": "Invierte con confianza.",
+    "heroSubtitle": "Propiedades verificadas y asesoría local en Coto Brus.",
     "searchPlaceholder": "Buscar por distrito, tipo o características...",
     "statYears": "Años de Experiencia",
     "statClients": "Clientes Satisfechos",
